<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="18"
    tools:context=".LinearActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/linear_layout_text"
        android:background="#6600CC"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:textSize="38sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/android_text"
        android:background="#FFFF33"
        android:textColor="#CC0000"
        android:layout_weight="3"
        android:textSize="68sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/php_text"
        android:background="#339900"
        android:textColor="#CCCCCC"
        android:layout_weight="5"
        android:textSize="68sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/sql_text"
        android:background="#0066FF"
        android:textColor="#99FFFF"
        android:layout_weight="7"
        android:textSize="68sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/python_text"
        android:background="#FF6600"
        android:textColor="#0033FF"
        android:layout_weight="2"
        android:textSize="58sp"
        />

</LinearLayout>